--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -600,7 +600,7 @@
 
                         <!-- Button -->
                         <li class="nav-item d-none d-md-inline-block pl-3 pr-0 ml-auto">
-                            <a class="btn btn-sm text-primary u-btn-white u-btn-pill transition-3d-hover" href="https://themes.getbootstrap.com/product/front-multipurpose-responsive-template/" target="_blank">
+                            <a class="btn btn-sm text-primary u-btn-white u-btn-pill transition-3d-hover" href="#" target="_blank">
                                 Vos espaces de travail
                             </a>
                         </li>
@@ -818,67 +818,142 @@
 
     <!-- Testimonial -->
     <div class="u-bg-img-hero" style="background-image: url(../../assets/img/bg-shapes/bg3.png);">
-      <div class="container u-space-3">
-        <!-- SVG Quote -->
-        <figure class="mb-5 mx-auto" style="width: 70px;">
-          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 8 8" style="enable-background:new 0 0 8 8;" xml:space="preserve">
-            <path class="u-fill-primary" d="M3,1.3C2,1.7,1.2,2.7,1.2,3.6c0,0.2,0,0.4,0.1,0.5c0.2-0.2,0.5-0.3,0.9-0.3c0.8,0,1.5,0.6,1.5,1.5c0,0.9-0.7,1.5-1.5,1.5
-              C1.4,6.9,1,6.6,0.7,6.1C0.4,5.6,0.3,4.9,0.3,4.5c0-1.6,0.8-2.9,2.5-3.7L3,1.3z M7.1,1.3c-1,0.4-1.8,1.4-1.8,2.3
-              c0,0.2,0,0.4,0.1,0.5c0.2-0.2,0.5-0.3,0.9-0.3c0.8,0,1.5,0.6,1.5,1.5c0,0.9-0.7,1.5-1.5,1.5c-0.7,0-1.1-0.3-1.4-0.8
-              C4.4,5.6,4.4,4.9,4.4,4.5c0-1.6,0.8-2.9,2.5-3.7L7.1,1.3z"></path>
-          </svg>
-        </figure>
-        <!-- End SVG Quote -->
+        <div class="container u-space-3">
+            <!-- SVG Quote -->
+            <figure class="mb-5 mx-auto" style="width: 70px;">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 8 8" style="enable-background:new 0 0 8 8;" xml:space="preserve">
+                    <path class="u-fill-primary" d="M3,1.3C2,1.7,1.2,2.7,1.2,3.6c0,0.2,0,0.4,0.1,0.5c0.2-0.2,0.5-0.3,0.9-0.3c0.8,0,1.5,0.6,1.5,1.5c0,0.9-0.7,1.5-1.5,1.5
+                        C1.4,6.9,1,6.6,0.7,6.1C0.4,5.6,0.3,4.9,0.3,4.5c0-1.6,0.8-2.9,2.5-3.7L3,1.3z M7.1,1.3c-1,0.4-1.8,1.4-1.8,2.3
+                        c0,0.2,0,0.4,0.1,0.5c0.2-0.2,0.5-0.3,0.9-0.3c0.8,0,1.5,0.6,1.5,1.5c0,0.9-0.7,1.5-1.5,1.5c-0.7,0-1.1-0.3-1.4-0.8
+                        C4.4,5.6,4.4,4.9,4.4,4.5c0-1.6,0.8-2.9,2.5-3.7L7.1,1.3z">
+                    </path>
+                </svg>
+            </figure>
+            <!-- End SVG Quote -->
 
-        <!-- Testimonials Carousel Main -->
-        <div id="testimonialsNavMain" class="js-slick-carousel u-slick u-slick--transform-off mb-4 slick-initialized slick-slider" data-infinite="true" data-autoplay="true" data-speed="5000" data-fade="true" data-nav-for="#testimonialsNavPagination">
-          <div class="slick-list draggable"><div class="slick-track" style="opacity: 1; width: 3330px;"><div class="js-slide slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 1110px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1; height: auto;" tabindex="0">
-            <!-- Testimonials -->
-            <div class="w-md-80 w-lg-60 text-center mx-auto">
-              <blockquote class="h3 mb-5">The template is really nice and offers quite a large set of options. Thank you!</blockquote>
-              <h4 class="h6 text-muted">Maria Muszynska, Google</h4>
+            <!-- Testimonials Carousel Main -->
+            <div id="testimonialsNavMain" class="js-slick-carousel u-slick u-slick--transform-off mb-4 slick-initialized slick-slider" data-infinite="true" data-autoplay="true" data-speed="5000" data-fade="true" data-nav-for="#testimonialsNavPagination">
+                <div class="slick-list draggable">
+                    <div class="slick-track" style="opacity: 1; width: 3330px;">
+                        <div class="js-slide slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 1110px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1; height: auto;" tabindex="0">
+                            <!-- Testimonials -->
+                            <div class="w-md-80 w-lg-60 text-center mx-auto">
+                                <blockquote class="h3 mb-5">The template is really nice and offers quite a large set of options. Thank you!</blockquote>
+                                <h4 class="h6 text-muted">Maria Muszynska, Google</h4>
+                            </div>
+                            <!-- End Testimonials -->
+                        </div>
+                        
+                        <div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" style="width: 1110px; position: relative; left: -1110px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms ease 0s;" tabindex="-1">
+                            <!-- Testimonials -->
+                            <div class="w-md-80 w-lg-60 text-center mx-auto">
+                                <blockquote class="h3 mb-5">It's beautiful and the coding is done quickly and seamlessly. Keep it up!</blockquote>
+                                <h4 class="h6 text-muted">James Austin, Slack</h4>
+                            </div>
+                            <!-- End Testimonials -->
+                        </div>
+                        
+                        <div class="js-slide slick-slide" data-slick-index="2" aria-hidden="true" style="width: 1110px; position: relative; left: -2220px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms ease 0s;" tabindex="-1">
+                            <!-- Testimonials -->
+                            <div class="w-md-80 w-lg-60 text-center mx-auto">
+                                <blockquote class="h3 mb-5">I love Front! I love the ease of use, I love the fact that I have total creative freedom...</blockquote>
+                                <h4 class="h6 text-muted">Charlotte Moore, Amazon</h4>
+                            </div>
+                            <!-- End Testimonials -->
+                        </div>
+                    </div>
+                </div>
             </div>
-            <!-- End Testimonials -->
-          </div><div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" style="width: 1110px; position: relative; left: -1110px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms ease 0s;" tabindex="-1">
-            <!-- Testimonials -->
-            <div class="w-md-80 w-lg-60 text-center mx-auto">
-              <blockquote class="h3 mb-5">It's beautiful and the coding is done quickly and seamlessly. Keep it up!</blockquote>
-              <h4 class="h6 text-muted">James Austin, Slack</h4>
-            </div>
-            <!-- End Testimonials -->
-          </div><div class="js-slide slick-slide" data-slick-index="2" aria-hidden="true" style="width: 1110px; position: relative; left: -2220px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms ease 0s;" tabindex="-1">
-            <!-- Testimonials -->
-            <div class="w-md-80 w-lg-60 text-center mx-auto">
-              <blockquote class="h3 mb-5">I love Front! I love the ease of use, I love the fact that I have total creative freedom...</blockquote>
-              <h4 class="h6 text-muted">Charlotte Moore, Amazon</h4>
-            </div>
-            <!-- End Testimonials -->
-          </div></div></div>
+            <!-- End Testimonials Carousel Main -->
 
-          
-
-          
+            <!-- Testimonials Carousel Pagination -->
+            <div id="testimonialsNavPagination" class="js-slick-carousel u-slick u-slick--pagination-modern u-slick--transform-off mx-auto slick-initialized slick-slider slick-transform-off" data-infinite="true" data-autoplay="true" data-speed="5000" data-focus-on-select="true" data-center-mode="true" data-slides-show="3" data-is-thumbs="true" data-nav-for="#testimonialsNavMain">
+                <div class="slick-list draggable" style="padding: 0px;">
+                    <div class="slick-track" style="opacity: 1; width: 201px; transform: translate3d(-201px, 0px, 0px);">
+                        <div class="js-slide slick-slide slick-current slick-center" data-slick-index="0" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
+                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img1.jpg" alt="Image Description">
+                        </div>
+                        
+                        <div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
+                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img3.jpg" alt="Image Description">
+                        </div>
+                        
+                        <div class="js-slide slick-slide slick-center" data-slick-index="2" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
+                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img2.jpg" alt="Image Description">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- End Testimonials Carousel Pagination -->
         </div>
-        <!-- End Testimonials Carousel Main -->
-
-        <!-- Testimonials Carousel Pagination -->
-        <div id="testimonialsNavPagination" class="js-slick-carousel u-slick u-slick--pagination-modern u-slick--transform-off mx-auto slick-initialized slick-slider slick-transform-off" data-infinite="true" data-autoplay="true" data-speed="5000" data-focus-on-select="true" data-center-mode="true" data-slides-show="3" data-is-thumbs="true" data-nav-for="#testimonialsNavMain">
-          <div class="slick-list draggable" style="padding: 0px;"><div class="slick-track" style="opacity: 1; width: 201px; transform: translate3d(-201px, 0px, 0px);"><div class="js-slide slick-slide slick-current slick-center" data-slick-index="0" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img1.jpg" alt="Image Description">
-          </div><div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img3.jpg" alt="Image Description">
-          </div><div class="js-slide slick-slide slick-center" data-slick-index="2" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img2.jpg" alt="Image Description">
-          </div></div></div>
-
-          
-
-          
-        </div>
-        <!-- End Testimonials Carousel Pagination -->
-      </div>
     </div>
     <!-- End of Testimonial -->
+
+    <!-- Client Section -->
+    <div class="container u-space-2">
+        <div class="js-slick-carousel u-slick slick-initialized slick-slider" data-autoplay="true" data-speed="5000" data-infinite="true" data-slides-show="6" 
+            data-responsive="[{
+                &quot;breakpoint&quot;: 1200,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 4
+                }
+            }, {
+                &quot;breakpoint&quot;: 992,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 4
+                }
+            }, {
+                &quot;breakpoint&quot;: 768,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 3
+                }
+            }, {
+                &quot;breakpoint&quot;: 576,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 3
+                }
+            }, {
+                &quot;breakpoint&quot;: 480,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 2
+                }
+            }]">
+        
+            <div class="slick-list draggable">
+                <div class="slick-track" style="opacity: 1; width: 4070px; transform: translate3d(-2035px, 0px, 0px);">
+                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-6" aria-hidden="true" style="width: 185px;" tabindex="-1">
+                        <img class="u-clients" src="../../assets/svg/clients-logo/paypal.svg" alt="Image Description">
+                    </div>
+                    
+                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-5" aria-hidden="true" style="width: 185px;" tabindex="-1">
+                        <img class="u-clients" src="../../assets/svg/clients-logo/slack.svg" alt="Image Description">
+                    </div>
+                    
+                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" style="width: 185px;" tabindex="-1">
+                        <img class="u-clients" src="../../assets/svg/clients-logo/samsung.svg" alt="Image Description">
+                    </div>
+                    
+                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" style="width: 185px;" tabindex="-1">
+                        <img class="u-clients" src="../../assets/svg/clients-logo/google.svg" alt="Image Description">
+                    </div>
+                    
+                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" style="width: 185px;" tabindex="-1">
+                        <img class="u-clients" src="../../assets/svg/clients-logo/lenovo.svg" alt="Image Description">
+                    </div>
+                    
+                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true" style="width: 185px;" tabindex="-1">
+                        <img class="u-clients" src="../../assets/svg/clients-logo/spotify.svg" alt="Image Description">
+                    </div>
+                    
+                    <div class="js-slide slick-slide" data-slick-index="0" aria-hidden="true" style="width: 185px; height: auto;" tabindex="-1">
+                        <img class="u-clients" src="../../assets/svg/clients-logo/amazon.svg" alt="Image Description">
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End of Client Section -->
 
     <!-- CTA -->
     <div class="u-gradient-half-primary-v4">
@@ -892,10 +967,8 @@
                 <div class="col-md-6 col-lg-5 text-md-right">
                     <a class="btn btn-success u-btn-success u-btn-wide transition-3d-hover mb-1 mb-sm-0 mr-sm-1" href="../pages/signup-simple.html">Premiers Pas</a>
                 </div>
-            </div>
-            
+            </div>   
             <hr class="opacity-0_2 my-0">
-
         </div> 
     </div>
     <!-- End of CTA -->
