Theme JavaScript Upgraded

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -889,6 +889,8 @@
     </div>
     <!-- End of Testimonial -->
 
+    <hr class="my-0">
+
     <!-- Client Section -->
     <div class="container u-space-2">
         <div class="js-slick-carousel u-slick slick-initialized slick-slider" data-autoplay="true" data-speed="5000" data-infinite="true" data-slides-show="6" 
@@ -953,7 +955,11 @@
             </div>
         </div>
     </div>
+
+    
     <!-- End of Client Section -->
+
+    
 
     <!-- CTA -->
     <div class="u-gradient-half-primary-v4">
