image_path helper for assets

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -6,7 +6,7 @@
             <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
                 <!-- Logo -->
                 <a class="navbar-brand u-header__navbar-brand mr-7" href="index.html" aria-label="d">
-                    <img src="../../assets/svg/logos/logo-white.svg" alt="Logo">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo.svg') %>
                 </a>
                 <!-- End Logo -->
 
