--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -6,7 +6,7 @@
             <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
                 <!-- Logo -->
                 <a class="navbar-brand u-header__navbar-brand mr-7" href="index.html" aria-label="d">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo.svg') %>
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo.svg'), :alt => "Logo" %>
                 </a>
                 <!-- End Logo -->
 
@@ -794,7 +794,7 @@
                             </clipPath>
                             <g style="clip-path:url(#mockup2);">
                                 <!-- Apply your (615px width to 750px height) image here -->
-                                <image style="overflow:visible;" width="615" height="750" xlink:href="../../assets/img/615x750/img3.jpg" transform="matrix(1 0 0 1 -0.1366 -0.9532)"></image>
+                                <image style="overflow:visible;" width="615" height="750" xlink:href="<%= asset_pack_path('init/bootstrap/theme/img/615x750/img3.jpg') %>" transform="matrix(1 0 0 1 -0.1366 -0.9532)"></image>                   
                             </g>
                         </g>
                         <circle class="u-fill-danger" cx="126.3" cy="693.8" r="16.3"></circle>
@@ -810,7 +810,7 @@
     <!-- End of Service Section -->
 
     <!-- Testimonial -->
-    <div class="u-bg-img-hero" style="background-image: url(../../assets/img/bg-shapes/bg3.png);">
+    <div class="u-bg-img-hero" style="background-image: url(<%= asset_pack_path('init/bootstrap/theme/img/bg-shapes/bg3.png') %>);">
         <div class="container u-space-3">
             <!-- SVG Quote -->
             <figure class="mb-5 mx-auto" style="width: 70px;">
@@ -864,15 +864,15 @@
                 <div class="slick-list draggable" style="padding: 0px;">
                     <div class="slick-track" style="opacity: 1; width: 201px; transform: translate3d(-201px, 0px, 0px);">
                         <div class="js-slide slick-slide slick-current slick-center" data-slick-index="0" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img1.jpg" alt="Image Description">
+                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg') %>" alt="Image Description">
                         </div>
                         
                         <div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img3.jpg" alt="Image Description">
+                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/img3.jpg') %>" alt="Image Description">
                         </div>
                         
                         <div class="js-slide slick-slide slick-center" data-slick-index="2" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="../../assets/img/100x100/img2.jpg" alt="Image Description">
+                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/img2.jpg') %>" alt="Image Description">
                         </div>
                     </div>
                 </div>
@@ -917,31 +917,23 @@
             <div class="slick-list draggable">
                 <div class="slick-track" style="opacity: 1; width: 4070px; transform: translate3d(-2035px, 0px, 0px);">
                     <div class="js-slide slick-slide slick-cloned" data-slick-index="-6" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <img class="u-clients" src="../../assets/svg/clients-logo/paypal.svg" alt="Image Description">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_cci.png'), :alt => "CCI Logo" %>
                     </div>
                     
                     <div class="js-slide slick-slide slick-cloned" data-slick-index="-5" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <img class="u-clients" src="../../assets/svg/clients-logo/slack.svg" alt="Image Description">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_pole-emploi.png'), :alt => "Pole Emploi Logo" %>
                     </div>
                     
                     <div class="js-slide slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <img class="u-clients" src="../../assets/svg/clients-logo/samsung.svg" alt="Image Description">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_bge.png'), :alt => "BGE Logo" %>
                     </div>
                     
                     <div class="js-slide slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <img class="u-clients" src="../../assets/svg/clients-logo/google.svg" alt="Image Description">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_initiative-france.png'), :alt => "Initiative France Logo" %>
                     </div>
                     
                     <div class="js-slide slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <img class="u-clients" src="../../assets/svg/clients-logo/lenovo.svg" alt="Image Description">
-                    </div>
-                    
-                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <img class="u-clients" src="../../assets/svg/clients-logo/spotify.svg" alt="Image Description">
-                    </div>
-                    
-                    <div class="js-slide slick-slide" data-slick-index="0" aria-hidden="true" style="width: 185px; height: auto;" tabindex="-1">
-                        <img class="u-clients" src="../../assets/svg/clients-logo/amazon.svg" alt="Image Description">
+                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_cci.png'), :alt => "CCI Logo" %>
                     </div>
                     
                 </div>
