--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -6,7 +6,7 @@
             <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
                 <!-- Logo -->
                 <a class="navbar-brand u-header__navbar-brand mr-7" href="index.html" aria-label="d">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo.svg'), :alt => "Logo" %>
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo-white.svg'), :alt => "Logo" %>
                 </a>
                 <!-- End Logo -->
 
@@ -882,69 +882,67 @@
     </div>
     <!-- End of Testimonial -->
 
-    <hr class="my-0">
+    <hr class="my-0">  
+
 
     <!-- Client Section -->
+    
     <div class="container u-space-2">
-        <div class="js-slick-carousel u-slick slick-initialized slick-slider" data-autoplay="true" data-speed="5000" data-infinite="true" data-slides-show="6" 
-            data-responsive="[{
-                &quot;breakpoint&quot;: 1200,
-                &quot;settings&quot;: {
-                    &quot;slidesToShow&quot;: 4
-                }
-            }, {
-                &quot;breakpoint&quot;: 992,
-                &quot;settings&quot;: {
-                    &quot;slidesToShow&quot;: 4
-                }
-            }, {
-                &quot;breakpoint&quot;: 768,
-                &quot;settings&quot;: {
-                    &quot;slidesToShow&quot;: 3
-                }
-            }, {
-                &quot;breakpoint&quot;: 576,
-                &quot;settings&quot;: {
-                    &quot;slidesToShow&quot;: 3
-                }
-            }, {
-                &quot;breakpoint&quot;: 480,
-                &quot;settings&quot;: {
-                    &quot;slidesToShow&quot;: 2
-                }
-            }]">
-        
+        <div class="js-slick-carousel u-slick slick-initialized slick-slider" data-autoplay="true" data-speed="5000" data-infinite="true" data-slides-show="6" data-responsive="[{
+            &quot;breakpoint&quot;: 1200,
+            &quot;settings&quot;: {
+                &quot;slidesToShow&quot;: 4
+            }
+        }, {
+            &quot;breakpoint&quot;: 992,
+            &quot;settings&quot;: {
+                &quot;slidesToShow&quot;: 4
+            }
+        }, {
+            &quot;breakpoint&quot;: 768,
+            &quot;settings&quot;: {
+                &quot;slidesToShow&quot;: 3
+            }
+        }, {
+            &quot;breakpoint&quot;: 576,
+            &quot;settings&quot;: {
+                &quot;slidesToShow&quot;: 3
+            }
+        }, {
+            &quot;breakpoint&quot;: 480,
+            &quot;settings&quot;: {
+                &quot;slidesToShow&quot;: 2
+            }
+        }]">        
+         
             <div class="slick-list draggable">
-                <div class="slick-track" style="opacity: 1; width: 4070px; transform: translate3d(-2035px, 0px, 0px);">
-                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-6" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_cci.png'), :alt => "CCI Logo" %>
+                <div class="slick-track" style="opacity: 1; width: 1100px; transform: translate3d(150px, 0px, 0px);">
+                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-6" aria-hidden="true">
+                        <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_bge.png') %>" alt="BGE Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-5" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_pole-emploi.png'), :alt => "Pole Emploi Logo" %>
+                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-5" aria-hidden="true">
+                        <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_cci.png') %>" alt="CCI Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_bge.png'), :alt => "BGE Logo" %>
+                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-4" aria-hidden="true">
+                        <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_initiative-france.png') %>" alt="IF Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_initiative-france.png'), :alt => "Initiative France Logo" %>
+                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-3" aria-hidden="true">
+                        <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_pole-emploi.png') %>" alt="PE Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" style="width: 185px;" tabindex="-1">
-                        <%= image_tag asset_pack_path('init/bootstrap/theme/img/logos/logo_cci.png'), :alt => "CCI Logo" %>
+                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-2" aria-hidden="true">
+                        <img class="u-clients" src="mg class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_pole-emploi.png') %>" alt="Image Description">
                     </div>
                     
                 </div>
             </div>
         </div>
     </div>
-
-    
+    <!-- end demo -->
     <!-- End of Client Section -->
-
-    
 
     <!-- CTA -->
     <div class="u-gradient-half-primary-v4">
@@ -963,6 +961,9 @@
         </div> 
     </div>
     <!-- End of CTA -->
+
+
+
 
 
 </main>
