Clients logo modification

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -859,6 +859,8 @@
             </div>
             <!-- End Testimonials Carousel Main -->
 
+
+
             <!-- Testimonials Carousel Pagination -->
             <div id="testimonialsNavPagination" class="js-slick-carousel u-slick u-slick--pagination-modern u-slick--transform-off mx-auto slick-initialized slick-slider slick-transform-off" data-infinite="true" data-autoplay="true" data-speed="5000" data-focus-on-select="true" data-center-mode="true" data-slides-show="3" data-is-thumbs="true" data-nav-for="#testimonialsNavMain">
                 <div class="slick-list draggable" style="padding: 0px;">
@@ -886,7 +888,6 @@
 
 
     <!-- Client Section -->
-    
     <div class="container u-space-2">
         <div class="js-slick-carousel u-slick slick-initialized slick-slider" data-autoplay="true" data-speed="5000" data-infinite="true" data-slides-show="6" data-responsive="[{
             &quot;breakpoint&quot;: 1200,
@@ -917,31 +918,30 @@
          
             <div class="slick-list draggable">
                 <div class="slick-track" style="opacity: 1; width: 1100px; transform: translate3d(150px, 0px, 0px);">
-                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-6" aria-hidden="true">
+                    <div class="js-slide slick-slide slick-active" style="width: 185px; opacity:0.7;" tabindex="-1" data-slick-index="-6" aria-hidden="true">
                         <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_bge.png') %>" alt="BGE Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-5" aria-hidden="true">
-                        <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_cci.png') %>" alt="CCI Logo">
+                    <div class="js-slide slick-slide slick-active" style="width: 185px; opacity:0.7;" tabindex="-1" data-slick-index="-5" aria-hidden="true">
+                        <img class="u-clients custom_logo-4" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_cci.png') %>" alt="CCI Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-4" aria-hidden="true">
-                        <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_initiative-france.png') %>" alt="IF Logo">
+                    <div class="js-slide slick-slide slick-active" style="width: 185px; opacity:0.7;" tabindex="-1" data-slick-index="-4" aria-hidden="true">
+                        <img class="u-clients custom_logo-9" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_initiative-france.png') %>" alt="IF Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-3" aria-hidden="true">
+                    <div class="js-slide slick-slide slick-active" style="width: 185px; opacity:0.7;" tabindex="-1" data-slick-index="-3" aria-hidden="true">
                         <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_pole-emploi.png') %>" alt="PE Logo">
                     </div>
                     
-                    <div class="js-slide slick-slide slick-active" style="width: 185px;" tabindex="-1" data-slick-index="-2" aria-hidden="true">
-                        <img class="u-clients" src="mg class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_pole-emploi.png') %>" alt="Image Description">
+                    <div class="js-slide slick-slide slick-active" style="width: 185px; opacity:0.7;" tabindex="-1" data-slick-index="-2" aria-hidden="true">
+                        <img class="u-clients" src="<%= asset_pack_path('init/bootstrap/theme/img/logos/logo_cma.png') %>" alt="CM Logo">
                     </div>
                     
                 </div>
             </div>
         </div>
     </div>
-    <!-- end demo -->
     <!-- End of Client Section -->
 
     <!-- CTA -->
