--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -7,3 +7,11 @@ figure {
 .u-btn-pill {
   border-radius: 6.1875rem !important;
 }
+
+.custom_logo-4 {
+  width: 4rem;
+}
+
+.custom_logo-9 {
+  width: 9rem;
+}
