--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -229,36 +229,36 @@
     <div class="container u-space-2">
         <!-- Title -->
         <div class="w-md-80 w-lg-50 text-center mx-auto mb-9">
-            <span class="u-label u-label--sm u-label--success mb-2">Confiance Par</span>
+            <span class="u-label u-label--sm u-label--success mb-2">Ils nous font confiance</span>
             
         </div>
         <!-- End of Title -->
         <div class="js-slick-carousel u-slick slick-initialized slick-slider" data-autoplay="true" data-speed="5000" data-infinite="true" data-slides-show="6" data-responsive="[{
-            &quot;breakpoint&quot;: 1200,
-            &quot;settings&quot;: {
-                &quot;slidesToShow&quot;: 4
-            }
-        }, {
-            &quot;breakpoint&quot;: 992,
-            &quot;settings&quot;: {
-                &quot;slidesToShow&quot;: 4
-            }
-        }, {
-            &quot;breakpoint&quot;: 768,
-            &quot;settings&quot;: {
-                &quot;slidesToShow&quot;: 3
-            }
-        }, {
-            &quot;breakpoint&quot;: 576,
-            &quot;settings&quot;: {
-                &quot;slidesToShow&quot;: 3
-            }
-        }, {
-            &quot;breakpoint&quot;: 480,
-            &quot;settings&quot;: {
-                &quot;slidesToShow&quot;: 2
-            }
-        }]">        
+                &quot;breakpoint&quot;: 1200,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 4
+                }
+            }, {
+                &quot;breakpoint&quot;: 992,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 4
+                }
+            }, {
+                &quot;breakpoint&quot;: 768,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 3
+                }
+            }, {
+                &quot;breakpoint&quot;: 576,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 3
+                }
+            }, {
+                &quot;breakpoint&quot;: 480,
+                &quot;settings&quot;: {
+                    &quot;slidesToShow&quot;: 2
+                }
+            }]">        
          
             <div class="slick-list draggable">
                 <div class="slick-track" style="opacity: 0.7; width: 1100px; transform: translate3d(80px, 0px, 0px);">
@@ -288,7 +288,11 @@
     </div>
     <!-- End of Client Section -->
 
-    <hr class="my-0">
+    <!-- Divider -->
+    <div class="container">
+      <hr class="my-0">
+    </div>
+    <!-- End of Divider -->
 
     <!-- Testimonial -->
     <div class="u-bg-img-hero" style="background-image: url(<%= asset_pack_path('init/bootstrap/theme/img/bg-shapes/bg3.png') %>);">
