project locaux logo added

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -5,8 +5,8 @@
             <!-- Nav -->
             <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
                 <!-- Logo -->
-                <a class="navbar-brand u-header__navbar-brand mr-7" href="index.html" aria-label="d">
-                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo-white.svg'), :alt => "Logo" %>
+                <a class="navbar-brand u-header__navbar-brand mr-7 " href="index.html" aria-label="d">
+                    <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo-projects-locaux-blc.svg'), :alt => "Logo", :class => "custom_logo" %>
                 </a>
                 <!-- End Logo -->
 
@@ -141,8 +141,11 @@
     <div class="container u-space-3-top u-space-2-bottom">
         <!-- Title -->
         <div class="w-md-80 w-lg-50 mb-9">
-            <h2 class="text-primary">Faciliter votre action <span class="font-weight-bold">locale</span></h2>
-            <p>une plateforme conçue pour faciliter votre action locale</p>
+            <h2 class="text-primary">Faciliter votre  
+                <span class="font-weight-bold">action locale</span>
+            </h2>
+            <p style="text-align: justify;">Notre site rend plus simple le travail de votre équipe en vous permettant d'avoir en permanence la liste à jour de tous les porteurs de projet, </p> 
+            <p class="font-weight-bold" style="margin-top: -15px;">actifs sur votre région </p>
         </div>
         <!-- End Title -->
 
@@ -316,8 +319,10 @@
                         <div class="js-slide slick-slide slick-current slick-active" data-slick-index="0" aria-hidden="false" style="width: 1110px; position: relative; left: 0px; top: 0px; z-index: 999; opacity: 1; height: auto;" tabindex="0">
                             <!-- Testimonials -->
                             <div class="w-md-80 w-lg-60 text-center mx-auto">
-                                <blockquote class="h3 mb-5">The template is really nice and offers quite a large set of options. Thank you!</blockquote>
-                                <h4 class="h6 text-muted">Maria Muszynska, Google</h4>
+                                <blockquote class="h3 mb-5">
+                                    Sur Projets-locaux je gère mes contacts et je découvre en même temps tous les profils disponibles enregistrés dans ma région.
+                                </blockquote>
+                                <h4 class="h6 text-muted">Bill Gates, Microsoft</h4>
                             </div>
                             <!-- End Testimonials -->
                         </div>
@@ -368,8 +373,6 @@
         </div>
     </div>
     <!-- End of Testimonial -->
-
-
 
     <!-- CTA -->
     <div class="u-gradient-half-primary-v4">
