Premiers Pas Page added

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -53,20 +53,12 @@
             <!-- Input -->
             <div class="w-md-50 w-lg-40 mx-auto">
                 <form class="js-validate js-form-message">
-                    <div class="js-focus-state input-group input-group-lg u-form u-form--lg u-form--pill u-form--no-brd u-form--no-addon-brd">
-                        <input type="email" class="form-control u-form__input" name="email" required
-                            placeholder="Premiers pas"
-                            aria-label="Premiers pas">
-                        <span class="input-group-append u-form__append">
-                            <button type="submit" class="btn text-primary u-btn-white">
-                               <!-- <span class="fas fa-paper-plane"></span> -->
-                            </button>
-                            
-                        </span>
-                    </div>
+                    <a class="btn btn-block text-primary u-btn-white u-btn-pill transition-3d-hover" href="/landing/bishal2" target="_blank">
+                        Premiers Pas
+                    </a>
                 </form>
             </div>
-            <!-- End of Input -->
+            <!-- End of Input -->  
         </div>
         <!-- End of Content -->
 
@@ -322,25 +314,7 @@
                                 <blockquote class="h3 mb-5">
                                     Sur Projets-locaux je gère mes contacts et je découvre en même temps tous les profils disponibles enregistrés dans ma région.
                                 </blockquote>
-                                <h4 class="h6 text-muted">Bill Gates, Microsoft</h4>
-                            </div>
-                            <!-- End Testimonials -->
-                        </div>
-                        
-                        <div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" style="width: 1110px; position: relative; left: -1110px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms ease 0s;" tabindex="-1">
-                            <!-- Testimonials -->
-                            <div class="w-md-80 w-lg-60 text-center mx-auto">
-                                <blockquote class="h3 mb-5">It's beautiful and the coding is done quickly and seamlessly. Keep it up!</blockquote>
-                                <h4 class="h6 text-muted">James Austin, Slack</h4>
-                            </div>
-                            <!-- End Testimonials -->
-                        </div>
-                        
-                        <div class="js-slide slick-slide" data-slick-index="2" aria-hidden="true" style="width: 1110px; position: relative; left: -2220px; top: 0px; z-index: 998; opacity: 0; height: auto; transition: opacity 500ms ease 0s;" tabindex="-1">
-                            <!-- Testimonials -->
-                            <div class="w-md-80 w-lg-60 text-center mx-auto">
-                                <blockquote class="h3 mb-5">I love Front! I love the ease of use, I love the fact that I have total creative freedom...</blockquote>
-                                <h4 class="h6 text-muted">Charlotte Moore, Amazon</h4>
+                                <h4 class="h6 text-muted">Bishal Thapaliya, Thapaliya & Sons Int'l</h4>
                             </div>
                             <!-- End Testimonials -->
                         </div>
@@ -356,15 +330,7 @@
                 <div class="slick-list draggable" style="padding: 0px;">
                     <div class="slick-track" style="opacity: 1; width: 201px; transform: translate3d(-201px, 0px, 0px);">
                         <div class="js-slide slick-slide slick-current slick-center" data-slick-index="0" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/img1.jpg') %>" alt="Image Description">
-                        </div>
-                        
-                        <div class="js-slide slick-slide" data-slick-index="1" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/img3.jpg') %>" alt="Image Description">
-                        </div>
-                        
-                        <div class="js-slide slick-slide slick-center" data-slick-index="2" aria-hidden="true" style="width: 67px; height: auto;" tabindex="0">
-                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/img2.jpg') %>" alt="Image Description">
+                            <img class="img-fluid u-avatar rounded-circle mx-auto" src="<%= asset_pack_path('init/bootstrap/theme/img/100x100/bishal.jpg') %>" alt="Image Description">
                         </div>
                     </div>
                 </div>
@@ -384,7 +350,7 @@
                 </div>
 
                 <div class="col-md-6 col-lg-5 text-md-right">
-                    <a class="btn btn-success u-btn-success u-btn-wide transition-3d-hover mb-1 mb-sm-0 mr-sm-1" href="../pages/signup-simple.html">Premiers Pas</a>
+                    <a class="btn btn-success u-btn-success u-btn-wide transition-3d-hover mb-1 mb-sm-0 mr-sm-1" href="/landing/bishal2">Premiers Pas</a>
                 </div>
             </div>   
             <hr class="opacity-0_2 my-0">
