--- a/frontend/init/stylesheet/bishal.css
+++ b/frontend/init/stylesheet/bishal.css
@@ -24,3 +24,31 @@ figure {
 .input-group-lg > .form-control {
   text-align: center;
 }
+
+/* ======== For Premeirs Pas Page =============== */
+
+.custom_header {
+  background: #377dff;
+}
+
+.custom_logo-2 {
+  margin: 0 auto;
+}
+
+.padding-top {
+  padding-top: 12rem;
+}
+
+.m-l-10 {
+  margin-left: 10px;
+}
+
+.fa-size {
+  font-size: 1.5rem;
+}
+
+@media (max-width: 767px) {
+  .padding-top {
+    padding-top: 6rem;
+  }
+}
