Creer page added

--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -5,7 +5,7 @@
       <!-- Nav -->
       <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
         <!-- Logo -->
-        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-top-space custom_logo-2" href="../home/index.html" aria-label="Front">
+        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-top-space custom_logo-2" href="/landing/bishal" aria-label="Front">
           <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo-projects-locaux-blc.svg'), :alt => "Logo", :class => " custom_logo" %>
         </a>
         <!-- End Logo -->
@@ -14,7 +14,9 @@
     </div>
   </div>
 </header>
+<!-- End Header -->
 
+<!-- Main -->
 <main id="content" role="main">
   <!-- Front for -->
   <div class="container padding-top u-space-3-bottom">
@@ -25,7 +27,7 @@
       </div>
 
       <!-- Link -->
-      <a class="media align-items-center shadow-sm p-4" href="#">
+      <a class="media align-items-center shadow-sm p-4" href="/landing/bishal3">
         <div class="d-flex pr-4">
           <span class="u-icon u-icon-primary--air u-icon--lg rounded-circle">
             <span class="fa fa-plus u-icon__inner"></span>
@@ -70,3 +72,4 @@
   </div>
   <!-- End Front for -->
 </main>
+<!-- End Main -->
