Login page created

--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -5,7 +5,7 @@
             <!-- Nav -->
             <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
                 <!-- Logo -->
-                <a class="navbar-brand u-header__navbar-brand mr-7 " href="index.html" aria-label="d">
+                <a class="navbar-brand u-header__navbar-brand mr-7 " href="/landing/bishal" aria-label="d">
                     <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo-projects-locaux-blc.svg'), :alt => "Logo", :class => "custom_logo" %>
                 </a>
                 <!-- End Logo -->
