--- a/app/views/landing/bishal3.html.erb
+++ b/app/views/landing/bishal3.html.erb
@@ -5,7 +5,7 @@
       <!-- Nav -->
       <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar hs-menu-initialized hs-menu-horizontal">
         <!-- Logo -->
-        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-top-space custom_logo-2" href="../home/index.html" aria-label="Front">
+        <a class="navbar-brand u-header__navbar-brand u-header__navbar-brand-top-space custom_logo-2" href="/landing/bishal" aria-label="Front">
           <%= image_tag asset_pack_path('init/bootstrap/theme/svg/logos/logo-projects-locaux-blc.svg'), :alt => "Logo", :class => " custom_logo" %>
         </a>
         <!-- End Logo -->
@@ -17,14 +17,14 @@
 <!-- End Header -->
 
 <main class="content" role="main">
-    <div class="container padding-top shadow-sm">
+    <div class="container shadow-sm modified-container">
         <div class="row no-gutters">
-            <div class="col-md-8 col-lg-7 col-xl-6 offset-md-2 offset-lg-2 offset-xl-3 u-space-3 u-space-0--lg">
+            <div class="col-md-8 col-lg-7 col-xl-6 offset-md-2 offset-lg-2 offset-xl-3 u-space-3 ">
                 <!-- Form -->
                 <form class="js-validate mt-5">
                     <!-- Title -->
                     <div class="mb-7">
-                        <h1 class="h3 text-primary font-weight-normal mb-0">Créer un espace de travail</span></h1>
+                        <h3 class="text-primary font-weight-bold">Créer un espace de travail</h3>
                         <p>Veuillez confirmer votre adresse e-mail afin de créer un tout nouvel espace de travail.</p>
                     </div>
                     <!-- End Title -->
