--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -49,7 +49,7 @@
       <!-- End Divider -->
 
       <!-- Link -->
-      <a class="media align-items-center shadow-sm p-4" href="#">
+      <a class="media align-items-center shadow-sm p-4" href="/landing/bishal4">
         <div class="d-flex pr-4">
           <span class="u-icon u-icon-primary--air u-icon--lg rounded-circle">
             <span class="fa fa-search u-icon__inner"></span>
