Trouvex page created

--- a/app/views/landing/bishal3.html.erb
+++ b/app/views/landing/bishal3.html.erb
@@ -17,18 +17,19 @@
 <!-- End Header -->
 
 <main class="content" role="main">
-    <div class="container shadow-sm modified-container">
-        <div class="row no-gutters">
-            <div class="col-md-8 col-lg-7 col-xl-6 offset-md-2 offset-lg-2 offset-xl-3 u-space-3 ">
-                <!-- Form -->
-                <form class="js-validate mt-5">
+    <!-- Front for -->
+    <div class="container padding-top u-space-3-bottom">
+        <div class="w-md-80 w-lg-50 mx-auto mb-9">
+            <!-- Link -->
+            <a class="media shadow-sm p-4" href="/landing/bishal3"> 
+                <div class="col-12 mb-5">
                     <!-- Title -->
-                    <div class="mb-7">
+                    <div class="mb-4">
                         <h3 class="text-primary font-weight-bold">Créer un espace de travail</h3>
                         <p>Veuillez confirmer votre adresse e-mail afin de créer un tout nouvel espace de travail.</p>
                     </div>
                     <!-- End Title -->
-
+                
                     <!-- Input -->
                     <div class="js-form-message mb-4">
                         <div class="js-focus-state input-group u-form">
@@ -44,20 +45,18 @@
                         </div>
                     </div>
                     <!-- End Button -->
-                </form>
-                <!-- End Form -->
 
-                <div class="row align-items-lg-center">
-                    <div class="col-lg-12 order-lg-1 mb-7 mb-lg-0">
-                        <!-- SVG Icon -->
-                        <%= image_tag asset_pack_path('init/bootstrap/theme/svg/flat-icons/sitting-woman-flat-concept-illustration.svg'), :alt => "SVG Illustration" %>
-                        <!-- End SVG Icon -->
+                    <div class="row align-items-lg-center">
+                        <div class="col-lg-12 order-lg-1 mb-7 mb-lg-0">
+                            <!-- SVG Icon -->
+                            <%= image_tag asset_pack_path('init/bootstrap/theme/svg/flat-icons/sitting-woman-flat-concept-illustration.svg'), :alt => "SVG Illustration" %>
+                            <!-- End SVG Icon -->
+                        </div>
                     </div>
                 </div>
-
-            </div>
+            </a>
+            <!-- End Link -->
         </div> 
     </div>
-
-    
+    <!-- End Front for -->
 </main>
