Creer espace page created

--- a/app/views/landing/bishal2.html.erb
+++ b/app/views/landing/bishal2.html.erb
@@ -19,7 +19,7 @@
 <!-- Main -->
 <main id="content" role="main">
   <!-- Front for -->
-  <div class="container padding-top u-space-3-bottom">
+  <div class="container mt-9 pt-9 u-space-3-bottom">
     <div class="w-md-80 w-lg-50 mx-auto mb-9">
       <!-- Title -->
       <div class="mb-3">
