--- a/app/views/landing/bishal3.html.erb
+++ b/app/views/landing/bishal3.html.erb
@@ -18,10 +18,10 @@
 
 <main class="content" role="main">
     <!-- Front for -->
-    <div class="container padding-top u-space-3-bottom">
+    <div class="container mt-8 pt-8">
         <div class="w-md-80 w-lg-50 mx-auto mb-9">
             <!-- Link -->
-            <a class="media shadow-sm p-4" href="/landing/bishal3"> 
+            <div class="media shadow-sm p-4" href="/landing/bishal3"> 
                 <div class="col-12 mb-5">
                     <!-- Title -->
                     <div class="mb-4">
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                 </div>
-            </a>
+            </div>
             <!-- End Link -->
         </div> 
     </div>
