--- a/app/views/landing/bishal4.html.erb
+++ b/app/views/landing/bishal4.html.erb
@@ -18,8 +18,8 @@
 
 <main class="content" role="main">
     <!-- Front for -->
-    <div class="container padding-top u-space-3-bottom">
-        <div class="w-md-80 w-lg-50 mx-auto mb-9">
+    <div class="container mt-8 pt-8">
+        <div class="w-md-80 w-lg-50 mx-auto">
             <!-- Link -->
             <div class="media shadow-sm p-4" href="/landing/bishal3"> 
                 <div class="col-12 mb-5">
@@ -31,9 +31,9 @@
                     <!-- End Title -->
 
                     <!-- Form -->
-                    <form class="js-validate mt-5">
+                    <form class="js-validate mt-3">
                         <!-- Input -->
-                        <div class="js-form-message mb-4">
+                        <div class="js-form-message mb-3">
                             <div class="js-focus-state input-group u-form">
                                 <input type="text" class="form-control u-form__input" name="username" required="" placeholder="Identifiant" aria-label="nom@example.com" data-msg="Please enter a valid username." data-error-class="u-has-error" data-success-class="u-has-success">
                             </div>
@@ -41,29 +41,30 @@
                         <!-- End Input -->
 
                         <!-- Input -->
-                        <div class="js-form-message mb-4">
+                        <div class="js-form-message mb-3">
                             <div class="js-focus-state input-group u-form">
                                 <input type="password" class="form-control u-form__input" name="password" required="" placeholder="Mot de passe" aria-label="********" data-msg="Your password is invalid. Please try again." data-error-class="u-has-error" data-success-class="u-has-success">
                             </div>
                         </div>
                         <!-- End Input -->
 
-                        <div class="col-12 text-right">
+                        <div class="col-12 text-right mb-1">
                             <a class="small u-link-muted" href="recover-account.html">Mot de passe oublié</a>
                         </div>
 
-                        <div class="col-12 mb-4">
-                            <span class="small text-muted">Vous n'avez pas de compte?</span>
-                            <a class="small" href="/landing/bishal3">S'inscrire</a>
-                        </div>
-
                         <!-- Button -->
-                        <div class="row align-items-center mb-5 text-center">
+                        <div class="row align-items-center mb-2 text-center">
                             <div class="col-12 ">
                                 <button type="submit" class="btn btn-block u-btn-primary--air transition-3d-hover">Valider</button>
                             </div>
                         </div>
                         <!-- End Button -->
+
+                        <div class="col-12 mb-3">
+                            <span class="small text-muted">Vous n'avez pas de compte?</span>
+                            <a class="small" href="/landing/bishal3">S'inscrire</a>
+                        </div>
+
                     </form>
 
                     <div class="row align-items-lg-center">
