--- a/app/views/landing/bishal.html.erb
+++ b/app/views/landing/bishal.html.erb
@@ -314,7 +314,7 @@
                                 <blockquote class="h3 mb-5">
                                     Sur Projets-locaux je gère mes contacts et je découvre en même temps tous les profils disponibles enregistrés dans ma région.
                                 </blockquote>
-                                <h4 class="h6 text-muted">Bishal Thapaliya, Thapaliya & Sons Int'l</h4>
+                                <h4 class="h6 text-muted">Thapaliya Bishal, Chargé de Projet Territoire, Boulogne-Billancourt</h4>
                             </div>
                             <!-- End Testimonials -->
                         </div>
